[package]
name = "test_stand"
version = "0.1.0"
edition = "2021"

[features]
# sqlx drivers and features
sqlx = ["sqlx/runtime-tokio-rustls"]
sqlx_postgres = ["sqlx", "sqlx/postgres"]
sqlx_mysql = ["sqlx", "sqlx/mysql"]
sqlx_sqlite = ["sqlx", "sqlx/sqlite"]

# deadpool drivers and features
deadpool_redis = []
deadpool_postgres = []

[dependencies]
test_stand_codegen = { path = "../codegen" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["sqlx_postgres"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }

